Bug : lors d'une erreur, on ne ferme pas la fenetre de création d'un type